# NeoSign

./: .env.local.example  .env.production.example  .gitignore  CONSTRUCT.md  README.CN.md  README.md  fastrun.example  fastrun.ps1  manage.py  mkdocs.yml  nginx.conf.example  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
NeoSign/: asgi.py  settings.py  urls.py  wsgi.py
authentication/: apps.py  forms.py  urls.py  utils.py  views.py
checkin/: admin.py  models.py  urls.py  views.py
checkin/migrations/: 0001_initial.py  0002_activity_location_enabled_activity_location_lat_and_more.py  0003_checkinrecord_status.py  0004_update_checkin_status_choices.py
core/: admin.py  apps.py  context_processors.py  middleware.py  models.py  urls.py  validators.py  views.py
core/migrations/: 0001_initial.py  0002_alter_customuser_student_id.py  0003_systemconfig_map_api_key.py  0004_systemconfig_password_length_and_more.py  0005_systemconfig_language_code_systemconfig_timezone_str.py  0006_systemconfig_map_provider.py  0007_add_map_security_key.py  0008_add_is_test.py  0009_systemconfig_custom_footer.py  0010_add_username_display_settings.py  0011_rename_student_id_to_username.py  (+1 more)
docs/: AMAP_QUICK_START.md  AMAP_QUICK_START.zh.md  DEPLOYMENT.md  DEPLOYMENT.zh.md  I18N_SETUP.md  MAP_SDK_GUIDE.md  MAP_SDK_GUIDE.zh.md  NGINX_AMAP_PROXY.md  NGINX_AMAP_PROXY.zh.md  SETUP.md  SETUP.zh.md  index.md  index.zh.md
installation/: apps.py  urls.py  views.py
management/: apps.py  urls.py  utils.py  views.py
templates/: base.html  index.html
(+15 files in other folders)
