[project]
name = "neosign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-extensions>=4.1",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pyopenssl>=25.3.0",
    "qrcode>=7.4.2",
    "werkzeug>=3.1.4",
]
